syntax = "proto3";

package rivet.backend.pkg.region.list_for_game;

import "resources/legacy/proto/common.proto";

message Request {
	repeated rivet.common.Uuid game_ids = 1;
}

message Response {
	repeated rivet.common.Uuid region_ids = 1;
}
